--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link  href="css/style.css" rel="stylesheet">
 <body>
     <h1>エーケ</h1>
-    <img src="./samples/DSC_0076.JPG" alt="エーケのプロフィール画像">
+    <img src="https://github.com/ak-no-lis/profile_page/blob/main/DSC_0076.JPG?raw=true" alt="エーケのプロフィール画像">
     <h2>プロフィール</h2>
     <p>
         出身：青森県<br>
