--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>エーケのプロフィールページ</title>
     <meta name="description" content="エーケのプロフィールを詳しく紹介">
 
     <!-- CSS -->
     <link rel="stylesheet" href="http://unpkg.com/ress/dist/ress.min.css">
-    <link href="http://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-    <link  href="css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 <body>
     <h1>エーケ</h1>
-    <img src="https://./samples/DSC_0076.JPG" alt="エーケのプロフィール画像">
+    <img src="https://../samples/DSC_0076.JPG" alt="エーケのプロフィール画像">
     <h2>プロフィール</h2>
     <p>
         出身：青森県<br>
