--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="http://unpkg.com/ress/dist/ress.min.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://ak-no-lis.github.io/profile_page/css/style.css">
 <body>
     <h1>エーケ</h1>
     <img src="https://github.com/ak-no-lis/profile_page/blob/main/DSC_0071~2.JPG?raw=true" alt="エーケのプロフィール画像">
