--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="エーケのプロフィールを詳しく紹介">
 
     <!-- CSS -->
+    <link rel="stylesheet" href="http://unpkg.com/ress/dist/ress.min.css">
+    <link href="http://fonts.gooleapis.com/css?family=Philosopher" rel="stylesheet">
     <link rel="stylesheet" href="http://ak-no-lis.github.io/profile_page/css/style.css"/>
 <body>
     <h1>エーケ</h1>
