--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="http://unpkg.com/ress/dist/ress.min.css">
     <link href="http://fonts.gooleapis.com/css?family=Philosopher" rel="stylesheet">
     <link rel="stylesheet" href="https://ak-no-lis.github.io/profile_page/css/style.css"/>
+</head>
 <body>
     <h1>エーケ</h1>
     <img src="https://github.com/ak-no-lis/profile_page/blob/main/DSC_0071~2.JPG?raw=true" alt="エーケのプロフィール画像">
