--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="http://unpkg.com/ress/dist/ress.min.css">
     <link href="http://fonts.gooleapis.com/css?family=Philosopher" rel="stylesheet">
-    <link rel="stylesheet" href="https://ak-no-lis.github.io/profile_page/css/style.css"/>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <h1>エーケ</h1>
