--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>エーケのプロフィールページ</title>
     <meta name="description" content="エーケのプロフィールを詳しく紹介">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://ak-no-lis.github.io/profile_page/css/style.css"/>
 </head>
 <body>
     <h1>エーケ</h1>
