--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>エーケのプロフィールページ</title>
-    <meta name="description" content="エーケのプロフィールを詳しく紹介">
-    <link rel="stylesheet" href="https://ak-no-lis.github.io/profile_page/css/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>エーケのプロフィールページ</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
     <h1>エーケ</h1>
