--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>エーケのプロフィールページ</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://github.com/ak-no-lis/profile_page/blob/main/style.css">
+  <link rel="stylesheet" href="https://ak-no-lis.github.io/profile_page/style.css">
 </head>
 <body>
     <h1>エーケ</h1>
