--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
     </header>
         <div class="profile wrapper">
-          <img src="../自己紹介ページ/samples/1662206099916~2.jpg" alt="エーケのプロフィール画像">
+          <img src="https://github.com/ak-no-lis/profile_page/blob/main/1662206099916~2.jpg?raw=true" alt="エーケのプロフィール画像">
           <ul>
             <p>プロフィール</p>
             <li>出身:青森県</li>
