--- a/0~25.html
+++ b/0~25.html
@@ -48,7 +48,7 @@
             当時の給料は手取りで12~13万。それなのにやめられない付き合い。<br>
             結局、その飲み仲間とは10年以上もつるむ事になるのです。<br>
           </p>
-          <img src="../自己紹介ページ/samples/IMG_20220831_122825093.jpg" alt="葉っぱ、雨">
+          <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_122825093.jpg?raw=true" alt="葉っぱ、雨">
         </div>
 </body>
 </html>
