--- a/26~35.html
+++ b/26~35.html
@@ -33,7 +33,7 @@
               このお金の貯まらない堕落した生活から抜け出したい。でもどうして良いかわからないし、一歩踏み出す勇気もない。<br>
               この頃の自分は、日常の辛さや本当の自分を酒でごまかすかのように過ごしていました。<br>
             </p>
-            <img src="../自己紹介ページ/samples/IMG_20220901_182347774.jpg" alt="夕焼け">
+            <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220901_182347774.jpg?raw=true" alt="夕焼け">
 
         </div>
 
