--- a/36~now.html
+++ b/36~now.html
@@ -31,7 +31,7 @@
               しかし、現実は甘くありませんでした。出会う女性にことごとくお断りされ8人目、9人目…先の見えない暗く長いトンネルの中を歩いてるようでした。<br>
               </p>
 
-              <img src="../自己紹介ページ/samples/IMG_20220831_185322106.jpg" alt="暗闇、雨">
+              <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_185322106.jpg?raw=true" alt="暗闇、雨">
 
               <p>
               あの婚約破断は良かったんだ。あれは自分にとって意味のある出来事だったんだ。いつかそう思える日が来るのを信じながら前に進む日々。そういう事を考えながら10人目に出会ったのが妻でした。<br>
