--- a/36~now.html
+++ b/36~now.html
@@ -47,7 +47,7 @@
 
               <h3>もっと勉強しなければ！</h3>
 
-              <img src="../自己紹介ページ/samples/IMG_20220828_180035910.jpg" alt="雲、光">
+              <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220828_180035910.jpg?raw=true" alt="雲、光">
 
               <p>
               その後、すぐさま保険の解約やその他の固定費見直しなど徹底的に行い、両学長の動画で紹介していたFP3級、簿記3級の勉強を開始。<br>
