--- a/36~now.html
+++ b/36~now.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="http://unpkg.com/ress/dist/ress.min.css">
     <link href="http://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-    <link href="ak-no-lis.github.io/profile_page/style.css" rel="stylesheet">
+    <link href="https://ak-no-lis.github.io/profile_page/style.css" rel="stylesheet">
 <body>
   <header class="page-header wrapper">
     <h1>エーケ ~Life is study~<p>光</p></h1>
