--- a/36~now.html
+++ b/36~now.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="http://unpkg.com/ress/dist/ress.min.css">
     <link href="http://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <link href="https://ak-no-lis.github.io/profile_page/style.css" rel="stylesheet">
+</head>
 <body>
   <header class="page-header wrapper">
     <h1>エーケ ~Life is study~<p>光</p></h1>
