--- a/0~25.html
+++ b/0~25.html
@@ -17,9 +17,9 @@
     <nav> 
       <ul class="old-nav">
         <li><a href="index.html">TOP</a></li>
-        <li><a href="0~25.html">0~25</a></li>
-        <li><a href="26~35.html">26~35</a></li>
-        <li><a href="36~now.html">36~今</a></li>
+        <li><a href="0~25.html">0歳~25歳</a></li>
+        <li><a href="26~35.html">26歳~35歳</a></li>
+        <li><a href="36~now.html">36歳~今</a></li>
       </ul>
     </nav>
   </header>
