--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="page-header wrapper">
     <h1>エーケ ~Life is study~<p>これまでとこれから</p></h1>
     <nav>
-      <ul class="old-nav">
+      <ul class="main-nav">
         <li><a href="0~25.html">0歳~25歳</a></li>
         <li><a href="26~35.html">26歳~35歳</a></li>
         <li><a href="36~now.html">36歳~今</a></li>
