--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     </header>
         <div class="profile wrapper">
-          <img src="https://github.com/ak-no-lis/profile_page/blob/main/1662206099916~2.jpg?raw=true" alt="エーケのプロフィール画像">
+          <img src="../自己紹介ページ/samples/1662206099916~2.jpg" alt="エーケのプロフィール画像">
           <ul>
             <p>プロフィール</p>
             <li>出身:青森県</li>
@@ -44,8 +44,7 @@
             喜び、怒り、哀しみ、楽しみ、今まで起こった全ての出来事が自分にとって必要な事だったんだと気づかせてくれた出会い。<br>
             これはよくいる普通で無能な会社員が人生とは何か？幸せとは何か？に気づくまでの物語です。<br>
             </p>
-
-            <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220902_181703771.jpg?raw=true" alt="">
         </div>
+        <img src="../自己紹介ページ/samples/IMG_20220902_181703771.jpg" alt="">
 </body>
 </html>
