--- a/26~35.html
+++ b/26~35.html
@@ -34,9 +34,8 @@
               このお金の貯まらない堕落した生活から抜け出したい。でもどうして良いかわからないし、一歩踏み出す勇気もない。<br>
               この頃の自分は、日常の辛さや本当の自分を酒でごまかすかのように過ごしていました。<br>
             </p>
-            <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220901_182347774.jpg?raw=true" alt="夕焼け">
-
         </div>
+            <img src="../自己紹介ページ/samples/IMG_20220901_182347774.jpg" alt="夕焼け">
 
         <div class="fall wrapper">
           <h2>31歳~35歳【幸せの絶頂からの転落】</h2>
@@ -52,7 +51,7 @@
             全身の力が抜けていくような感覚。幸せの絶頂から一気に奈落の底に突き落とされるような感覚が襲ってきて、訳がわからなかったです。<br>
             当然諦めきれず、少し距離を置いたり説得したりするも虚しく、そのまま婚約は破断になりました…<br>
           </p>
-          <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_072604215.jpg?raw=true" alt="歩道、雨">
         </div>
+          <img src="../自己紹介ページ/samples/IMG_20220831_072604215.jpg" alt="歩道、雨">
 </body>
 </html>
