--- a/36~now.html
+++ b/36~now.html
@@ -32,7 +32,7 @@
               しかし、現実は甘くありませんでした。出会う女性にことごとくお断りされ8人目、9人目…先の見えない暗く長いトンネルの中を歩いてるようでした。<br>
               </p>
 
-              <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_185322106.jpg?raw=true" alt="暗闇、雨">
+              <img src="../自己紹介ページ/samples/IMG_20220831_185322106.jpg" alt="暗闇、雨">
 
               <p>
               あの婚約破断は良かったんだ。あれは自分にとって意味のある出来事だったんだ。いつかそう思える日が来るのを信じながら前に進む日々。そういう事を考えながら10人目に出会ったのが妻でした。<br>
@@ -48,7 +48,7 @@
 
               <h3>もっと勉強しなければ！</h3>
 
-              <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220828_180035910.jpg?raw=true" alt="雲、光">
+              <img src="../自己紹介ページ/samples/IMG_20220828_180035910.jpg" alt="雲、光">
 
               <p>
               その後、すぐさま保険の解約やその他の固定費見直しなど徹底的に行い、両学長の動画で紹介していたFP3級、簿記3級の勉強を開始。<br>
