--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
             これはよくいる普通で無能な会社員が人生とは何か？幸せとは何か？に気づくまでの物語です。<br>
             </p>
         </div>
-        <img src="../自己紹介ページ/samples/IMG_20220902_181703771.jpg" alt="">
+        <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220902_181703771.jpg?raw=true" alt="">
 </body>
 </html>
