--- a/0~25.html
+++ b/0~25.html
@@ -36,7 +36,7 @@
             周りの友達は社交的で当然のように彼女がいて、自分は正反対。毎日そんな事が頭の中でグルグル回ってました。<br>
             </p>
         </div>    
-            <img src="../自己紹介ページ/samples/IMG_20220831_181822395.jpg" alt="曇り空">
+            <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_181822395.jpg?raw=true" alt="曇り空">
 
 
         <div class="complex wrapper">
