--- a/26~35.html
+++ b/26~35.html
@@ -35,7 +35,7 @@
               この頃の自分は、日常の辛さや本当の自分を酒でごまかすかのように過ごしていました。<br>
             </p>
         </div>
-            <img src="../自己紹介ページ/samples/IMG_20220901_182347774.jpg" alt="夕焼け">
+            <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220901_182347774.jpg?raw=true" alt="夕焼け">
 
         <div class="fall wrapper">
           <h2>31歳~35歳【幸せの絶頂からの転落】</h2>
