--- a/26~35.html
+++ b/26~35.html
@@ -52,6 +52,6 @@
             当然諦めきれず、少し距離を置いたり説得したりするも虚しく、そのまま婚約は破断になりました…<br>
           </p>
         </div>
-          <img src="../自己紹介ページ/samples/IMG_20220831_072604215.jpg" alt="歩道、雨">
+          <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_072604215.jpg?raw=true" alt="歩道、雨">
 </body>
 </html>
