--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://ak-no-lis.github.io/profile_page/style.css" rel="stylesheet">
 </head>
 <body>
+   <div id="home">
     <header class="page-header wrapper">
     <h1>エーケ ~Life is study~<p>これまでとこれから</p></h1>
     <nav>
@@ -22,7 +23,7 @@
       </ul>
     </nav>
     </header>
-        <div class="profile wrapper">
+       <div class="profile wrapper">
           <img src="https://github.com/ak-no-lis/profile_page/blob/main/1662206099916~2.jpg?raw=true" alt="エーケのプロフィール画像">
           <ul>
             <p>プロフィール</p>
@@ -44,7 +45,15 @@
             喜び、怒り、哀しみ、楽しみ、今まで起こった全ての出来事が自分にとって必要な事だったんだと気づかせてくれた出会い。<br>
             これはよくいる普通で無能な会社員が人生とは何か？幸せとは何か？に気づくまでの物語です。<br>
             </p>
-        </div>
         <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220902_181703771.jpg?raw=true" alt="">
+        </div>
+        <nav class="under">
+          <ul class="main-nav">
+            <li><a href="0~25.html">0歳~25歳</a></li>
+            <li><a href="26~35.html">26歳~35歳</a></li>
+            <li><a href="36~now.html">36歳~今</a></li>
+          </ul>
+        </nav>
+      </div>
 </body>
 </html>
