--- a/0~25.html
+++ b/0~25.html
@@ -12,12 +12,12 @@
     <link href="https://ak-no-lis.github.io/profile_page/style.css" rel="stylesheet">
 </head>
 <body>
+  <div id="home">
   <header class="page-header wrapper">
-    <h1>エーケ ~Life is study~<p>出生、コンプレックス</p></h1>
+    <h1>出生、コンプレックス</h1>
     <nav> 
       <ul class="main-nav">
         <li><a href="index.html">TOP</a></li>
-        <li><a href="0~25.html">0歳~25歳</a></li>
         <li><a href="26~35.html">26歳~35歳</a></li>
         <li><a href="36~now.html">36歳~今</a></li>
       </ul>
@@ -50,8 +50,13 @@
             当時の給料は手取りで12~13万。それなのにやめられない付き合い。<br>
             結局、その飲み仲間とは10年以上もつるむ事になるのです。<br>
           </p>
-        </div>
           <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_122825093.jpg?raw=true" alt="葉っぱ、雨">
-
+          </div>
+        <ul class="main-nav">
+          <li><a href="index.html">TOP</a></li>
+          <li><a href="26~35.html">26歳~35歳</a></li>
+          <li><a href="36~now.html">36歳~今</a></li>
+        </ul>
+  </div>
 </body>
 </html>
