--- a/26~35.html
+++ b/26~35.html
@@ -12,13 +12,13 @@
     <link href="https://ak-no-lis.github.io/profile_page/style.css" rel="stylesheet">
 </head>
 <body>
+  <div id="home">
   <header class="page-header wrapper">
-    <h1>エーケ ~Life is study~<p>堕落、転落</p></h1>
+    <h1>堕落、転落</h1>
     <nav>
       <ul class="main-nav">
         <li><a href="index.html">TOP</a></li>
         <li><a href="0~25.html">0歳~25歳</a></li>
-        <li><a href="26~35.html">26歳~35歳</a></li>
         <li><a href="36~now.html">36歳~今</a></li>
       </ul>
     </nav>
@@ -51,7 +51,15 @@
             全身の力が抜けていくような感覚。幸せの絶頂から一気に奈落の底に突き落とされるような感覚が襲ってきて、訳がわからなかったです。<br>
             当然諦めきれず、少し距離を置いたり説得したりするも虚しく、そのまま婚約は破断になりました…<br>
           </p>
-        </div>
           <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_072604215.jpg?raw=true" alt="歩道、雨">
+         </div>
+         <nav>
+          <ul class="main-nav">
+            <li><a href="index.html">TOP</a></li>
+            <li><a href="0~25.html">0歳~25歳</a></li>
+            <li><a href="36~now.html">36歳~今</a></li>
+          </ul>
+         </nav>
+  </div>
 </body>
 </html>
