--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             </p>
         <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220902_181703771.jpg?raw=true" alt="">
         </div>
-        <nav class="under">
-          <ul class="main-nav">
+        <nav>
+          <ul class="under-nav">
             <li><a href="0~25.html">0歳~25歳</a></li>
             <li><a href="26~35.html">26歳~35歳</a></li>
             <li><a href="36~now.html">36歳~今</a></li>
