--- a/0~25.html
+++ b/0~25.html
@@ -52,11 +52,13 @@
           </p>
           <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_122825093.jpg?raw=true" alt="葉っぱ、雨">
           </div>
-        <ul class="main-nav">
+        <nav>
+        <ul class="under-nav">
           <li><a href="index.html">TOP</a></li>
           <li><a href="26~35.html">26歳~35歳</a></li>
           <li><a href="36~now.html">36歳~今</a></li>
         </ul>
+        </nav>
   </div>
 </body>
 </html>
