--- a/26~35.html
+++ b/26~35.html
@@ -54,7 +54,7 @@
           <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_072604215.jpg?raw=true" alt="歩道、雨">
          </div>
          <nav>
-          <ul class="main-nav">
+          <ul class="under-nav">
             <li><a href="index.html">TOP</a></li>
             <li><a href="0~25.html">0歳~25歳</a></li>
             <li><a href="36~now.html">36歳~今</a></li>
