--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             喜び、怒り、哀しみ、楽しみ、今まで起こった全ての出来事が自分にとって必要な事だったんだと気づかせてくれた出会い。<br>
             これはよくいる普通で無能な会社員が人生とは何か？幸せとは何か？に気づくまでの物語です。<br>
             </p>
+        <div class="center">    
         <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220902_181703771.jpg?raw=true" alt="">
+        </div>
         </div>
         <nav>
           <ul class="under-nav">
