--- a/0~25.html
+++ b/0~25.html
@@ -35,9 +35,10 @@
             幸いな事に数人の友達はいましたが、恋愛の方は酷く、まともなお付き合いはほとんどなかったです。<br>
             周りの友達は社交的で当然のように彼女がいて、自分は正反対。毎日そんな事が頭の中でグルグル回ってました。<br>
             </p>
-        </div>    
-            <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_181822395.jpg?raw=true" alt="曇り空">
-
+        </div>
+        <div class="center">
+          <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_181822395.jpg?raw=true" alt="曇り空">
+        </div>
 
         <div class="complex wrapper">
           <h2>21歳~25歳【挫折と劣等感の狭間で】</h2>
@@ -50,7 +51,9 @@
             当時の給料は手取りで12~13万。それなのにやめられない付き合い。<br>
             結局、その飲み仲間とは10年以上もつるむ事になるのです。<br>
           </p>
+         <div class="center">
           <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_122825093.jpg?raw=true" alt="葉っぱ、雨">
+         </div>
           </div>
         <nav>
         <ul class="under-nav">
