--- a/36~now.html
+++ b/36~now.html
@@ -30,9 +30,9 @@
               一人暮らしにもようやく慣れてきた頃、過去を吹っ切りたいのと、このままじゃ終われないという気持ちで婚活を始めます。<br>
               しかし、現実は甘くありませんでした。出会う女性にことごとくお断りされ8人目、9人目…先の見えない暗く長いトンネルの中を歩いてるようでした。<br>
               </p>
-
+            <div class="center">
               <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220831_185322106.jpg?raw=true" alt="暗闇、雨">
-
+            </div>
               <p>
               あの婚約破断は良かったんだ。あれは自分にとって意味のある出来事だったんだ。いつかそう思える日が来るのを信じながら前に進む日々。そういう事を考えながら10人目に出会ったのが妻でした。<br>
               彼女はこっちが気を使うぐらい緊張した面持ちだったので、自分は逆にリラックスして接することができ、その日は時間を忘れて談笑。<br>
@@ -46,9 +46,9 @@
               </p>
 
               <h3>もっと勉強しなければ！</h3>
-
+            <div class="center">
               <img src="https://github.com/ak-no-lis/profile_page/blob/main/IMG_20220828_180035910.jpg?raw=true" alt="雲、光">
-
+            </div>
               <p>
               その後、すぐさま保険の解約やその他の固定費見直しなど徹底的に行い、両学長の動画で紹介していたFP3級、簿記3級の勉強を開始。<br>
               ただ、働きながらの勉強は楽ではなく、休憩時間や休みの日などを利用して取り組み、時には妻に問題を出してもらったりして、2022年2月にFP3級合格。<br>
