--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="http://unpkg.com/ress/dist/ress.min.css">
     <link href="http://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <header id="page-header">
@@ -30,7 +30,7 @@
       <!-- hamburger-menu -->
     </header>
         <div class="profile wrapper">
-          <img src="../自己紹介ページ/samples/1662206099916~2.jpg" alt="エーケのプロフィール画像">
+          <img src="1662206099916~2.jpg" alt="エーケのプロフィール画像">
           <ul>
             <p>プロフィール</p>
             <li>出身:青森県</li>
@@ -56,7 +56,7 @@
               これはよくいる普通の会社員が人生とは何か？本当に大切なものとは何か？に気づくまでの物語です。<br>
             </p>
           <div class="center">
-            <img src="../自己紹介ページ/samples/IMG_20220902_181703771.jpg" alt="">
+            <img src="IMG_20220902_181703771.jpg" alt="">
           </div>
         </div>
 
@@ -82,7 +82,7 @@
         自分の青春時代は、ずっとそんな事が頭の中でグルグル回ってました。<br>
         </p>   
        <div class="center">
-        <img src="../自己紹介ページ/samples/IMG_20220831_181822395.jpg" alt="曇り空">
+        <img src="IMG_20220831_181822395.jpg" alt="曇り空">
        </div>
      </div>
 
@@ -107,7 +107,7 @@
         
       </p>
     <div class="center">
-      <img src="../自己紹介ページ/samples/IMG_20220831_122825093.jpg" alt="葉っぱ、雨">
+      <img src="IMG_20220831_122825093.jpg" alt="葉っぱ、雨">
     </div>
     </div>
         </section>
@@ -134,7 +134,7 @@
         この頃の自分は、日常の辛さや本当の自分を酒でごまかすかのように過ごしていました。<br>
       </p>
     <div class="center">
-    <img src="../自己紹介ページ/samples/IMG_20220901_182347774.jpg" alt="夕焼け">
+    <img src="IMG_20220901_182347774.jpg" alt="夕焼け">
     </div>
    </div>
 
@@ -171,7 +171,7 @@
       そんな事を思っていました。しかし、明日は毎日のようにやってくるのです。<br>
      </p>
      <div class="center">
-     <img src="../自己紹介ページ/samples/IMG_20220831_072604215.jpg" alt="歩道、雨">
+     <img src="IMG_20220831_072604215.jpg" alt="歩道、雨">
      </div>
     </div>
     </section>
@@ -192,7 +192,7 @@
         先の見えない暗く長いトンネルの中を歩いてるようでした。<br>
         </p>
         <div class="center">
-        <img src="../自己紹介ページ/samples/IMG_20220831_185322106.jpg" alt="暗闇、雨">
+        <img src="IMG_20220831_185322106.jpg" alt="暗闇、雨">
         </div>
         <p>
         あの婚約破断は良かったんだ。あれは自分にとって意味のある出来事だったんだ。いつかそう思える日が来るのを信じながら前に進む日々。そういう事を考えながら10人目に出会ったのが妻でした。<br>
@@ -215,7 +215,7 @@
 
         <h3>もっと勉強しなければ！</h3>
         <div class="center">
-        <img src="../自己紹介ページ/samples/IMG_20220828_180035910.jpg" alt="雲、光">
+        <img src="IMG_20220828_180035910.jpg" alt="雲、光">
         </div>
         <p>
         その後、すぐさま保険の解約やその他の固定費見直しなど徹底的に行い、両学長の動画で紹介していたFP3級、簿記3級の勉強を開始。<br>
