--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         それから毎日学校へ通うのが怖くなり、極度の人見知りになってしまいました。<br>
         はっきりとした原因は今でも分かっておらず、風の噂で聞こえてきたのが、自分の体に塗っている薬の匂いが嫌だったとかなんとか…<br>
         <br>
-        それは高校へ行っても、専門学校へ行っても、その性格は変わらず、臆病で不器用な部分を人に悟られないように、自分をごまかして見せる毎日。<br>
+        高校へ行っても、専門学校へ行っても、その性格は変わらず、臆病で不器用な部分を人に悟られないように、自分をごまかして見せる毎日。<br>
         <br>
         幸いな事に数人の友達はいたので、それなりに楽しい学生生活は送れてましたが、恋愛の方は酷く、付き合ってもすぐフラれるばかりでまともなお付き合いはほとんどなかったです。<br>
         周りの友達は社交的で当然のように長く付き合う彼女がいて、自分は正反対。「みんなは幸せそうなのに、なんで自分は…」<br>
